==========
Change log
==========

1.3.1 (unreleased)
==================

- Using `Zope Toolkit 1.0a2`_ instead of managing our own versions of
  dependent packages.

.. _`Zope Toolkit 1.0a2`: http://docs.zope.org/zopetoolkit/releases/overview-1.0a2.html

1.3.0 (2010-03-20)
==================

- Replaced `Simple single keyword search` by `Keyword search` which
  allows to search for multiple keywords concatenated by `and` or
  `or`.


1.2.0 (2010-02-06)
==================

- Feature: Added ability to clone a person.


1.1.2 (2010-01-27)
==================

- Search result table displayed only 50 entries. Now it displays all
  search results ordered by name.


1.1.1 (2010-01-25)
==================

- Fixed version of `icemac.ab.locales`.


1.1.0 (2010-01-25)
==================

Features
--------

- Added translation to XLS export files.

- Added creator, last modifier and modification date metadata to
  objects.

Bugfixes
--------

- When two users are exporting at the same time this could end in
  broken export files.

- On the person edit form:

  - the the last modification dates of the entries (postal address,
    phone number etc.) where the one of the person.

  - the keywords field was not correctly implemented: it was always
    marked as changed so the a new last modification date on the
    person was set, even when nothing has been changed.

  - editing a field of an entry did not change the modification date
    of this entry but of the person.


1.0.1 (2010-01-13)
==================

- Bugfix: The value fields of a user defined field of type `choice`
  could not contain non ascii characters. This broke the usage of the
  field on any object.


1.0.0 (2009-12-29)
==================

- Translated UI into German.

- Displaying modification date of adresses now.

- Dropped some package dependencies which existed for compatibility
  reasons with older versions. To upgrade to this version you might
  need to upgrade to 0.5.4 first. (See Update_.)

